--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -2,34 +2,90 @@ name: Laravel
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "*" ]
   pull_request:
     branches: [ "main" ]
 
 jobs:
-  laravel-tests:
+  Back-End-Laravel-Tests:
 
     runs-on: ubuntu-latest
 
+    services:
+      mysql:
+        image: mysql:8.0
+        ports:
+          - 3306:3306
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: test_db
+          MYSQL_USER: user
+          MYSQL_PASSWORD: password
+        options: >-
+          --health-cmd "mysqladmin ping --silent"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 3
+      
     steps:
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
-      with:
-        php-version: '8.0'
     - uses: actions/checkout@v4
+    
+    - uses: shivammathur/setup-php@v2
+      with:
+        php-version: '8.3'
+        
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+      working-directory: ./backend
+
+    - name: Update Dependencies
+      run: composer update
+      working-directory: ./backend
+
     - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      run: composer install
+      working-directory: ./backend
+
     - name: Generate key
       run: php artisan key:generate
+      working-directory: ./backend
+
+    - name: Add JWT secret to .env
+      run: echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env
+      working-directory: ./backend
+
+    - name: Update .env for MySQL
+      run: |
+        echo "DB_CONNECTION=mysql" >> .env
+        echo "DB_HOST=127.0.0.1" >> .env
+        echo "DB_PORT=3306" >> .env
+        echo "DB_DATABASE=test_db" >> .env
+        echo "DB_USERNAME=user" >> .env
+        echo "DB_PASSWORD=password" >> .env
+      working-directory: ./backend
+
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
-    - name: Create Database
+      working-directory: ./backend
+
+    - name: Wait for MySQL
       run: |
-        mkdir -p database
-        touch database/database.sqlite
+        until mysqladmin ping -h 127.0.0.1 -u root -proot --silent; do
+          echo 'waiting for mysql to be ready...'
+          sleep 5
+        done
+        
+    - name: Run Migrations
+      run: php artisan migrate --force
+      working-directory: ./backend
+
     - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
       env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
+        DB_CONNECTION: mysql
+        DB_HOST: 127.0.0.1
+        DB_PORT: 3306
+        DB_DATABASE: test_db
+        DB_USERNAME: user
+        DB_PASSWORD: password
       run: php artisan test
+      working-directory: ./backend
