--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -36,7 +36,7 @@ jobs:
         
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-      working-directory: ./backend
+      working-directory: ./
 
     - name: Update Dependencies
       run: composer update
