--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -2,13 +2,12 @@ name: Laravel
 
 on:
   push:
-    branches: [ "*" ]
+    branches: ["*"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   Back-End-Laravel-Tests:
-
     runs-on: ubuntu-latest
 
     services:
@@ -26,62 +25,70 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 3
-      
+
     steps:
-    - uses: actions/checkout@v4
-    
-    - uses: shivammathur/setup-php@v2
-      with:
-        php-version: '8.3'
-        
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-      working-directory: ./
+      - uses: actions/checkout@v4
 
-    - name: Update Dependencies
-      run: composer update
-      working-directory: ./
+      - uses: shivammathur/setup-php@v2
+        with:
+          php-version: "8.3"
 
-    - name: Install Dependencies
-      run: composer install
-      working-directory: ./
+      - name: Copy .env
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+        working-directory: ./
 
-    - name: Generate key
-      run: php artisan key:generate
-      working-directory: ./
+      - name: Update Dependencies
+        run: composer update
+        working-directory: ./
 
-    - name: Update .env for MySQL
-      run: |
-        echo "DB_CONNECTION=mysql" >> .env
-        echo "DB_HOST=127.0.0.1" >> .env
-        echo "DB_PORT=3306" >> .env
-        echo "DB_DATABASE=test_db" >> .env
-        echo "DB_USERNAME=user" >> .env
-        echo "DB_PASSWORD=password" >> .env
-      working-directory: ./
+      - name: Install Dependencies
+        run: composer install
+        working-directory: ./
 
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-      working-directory: ./
+      - name: Generate key
+        run: php artisan key:generate
+        working-directory: ./
 
-    - name: Wait for MySQL
-      run: |
-        until mysqladmin ping -h 127.0.0.1 -u root -proot --silent; do
-          echo 'waiting for mysql to be ready...'
-          sleep 5
-        done
-        
-    - name: Run Migrations
-      run: php artisan migrate --force
-      working-directory: ./
+      - name: Update .env for MySQL
+        run: |
+          echo "DB_CONNECTION=mysql" >> .env
+          echo "DB_HOST=127.0.0.1" >> .env
+          echo "DB_PORT=3306" >> .env
+          echo "DB_DATABASE=test_db" >> .env
+          echo "DB_USERNAME=user" >> .env
+          echo "DB_PASSWORD=password" >> .env
+        working-directory: ./
 
-    - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
-      env:
-        DB_CONNECTION: mysql
-        DB_HOST: 127.0.0.1
-        DB_PORT: 3306
-        DB_DATABASE: test_db
-        DB_USERNAME: user
-        DB_PASSWORD: password
-      run: php artisan test
-      working-directory: ./
+      - name: Directory Permissions
+        run: chmod -R 777 storage bootstrap/cache
+        working-directory: ./
+
+      - name: Wait for MySQL
+        run: |
+          until mysqladmin ping -h 127.0.0.1 -u root -proot --silent; do
+            echo 'waiting for mysql to be ready...'
+            sleep 5
+          done
+
+      - name: Run Migrations
+        run: php artisan migrate --force
+        working-directory: ./
+
+      - name: Run NPM
+        run: npm ci
+        working-directory: ./
+
+      - name: Run Laravel Reverb
+        run: php artisan reverb:start
+        working-directory: ./
+
+      - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
+        env:
+          DB_CONNECTION: mysql
+          DB_HOST: 127.0.0.1
+          DB_PORT: 3306
+          DB_DATABASE: test_db
+          DB_USERNAME: user
+          DB_PASSWORD: password
+        run: php artisan test
+        working-directory: ./
