--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
         "daisyui": "^4.12.10",
         "date-fns": "^4.0.0-beta.1",
         "emoji-picker-react": "^4.11.1",
+        "react-datepicker": "^7.5.0",
         "react-icons": "^5.2.1",
         "react-markdown": "^9.0.1",
         "react-router-dom": "^6.26.1",
         "react-toastify": "^10.0.5",
+        "styled-components": "^6.1.13",
         "uuid": "^10.0.0"
     }
 }
