--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "daisyui": "^4.12.10",
         "date-fns": "^4.1.0",
         "emoji-picker-react": "^4.11.1",
+        "react-chartjs-2": "^5.2.0",
         "react-datepicker": "^7.5.0",
         "react-icons": "^5.2.1",
         "react-markdown": "^9.0.1",
