--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/reverb": "^1.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "spatie/laravel-health": "^1.30",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
