--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
         "date-fns": "^4.1.0",
         "emoji-picker-react": "^4.11.1",
         "react-chartjs-2": "^5.2.0",
+        "react-custom-scrollbars-2": "^4.5.0",
         "react-datepicker": "^7.5.0",
         "react-icons": "^5.2.1",
         "react-markdown": "^9.0.1",
         "react-router-dom": "^6.26.1",
         "react-toastify": "^10.0.6",
-        "styled-components": "^6.1.13",
         "uuid": "^10.0.0"
     }
 }
